# DBSTEP

./: .gitignore  .pre-commit-config.yaml  .travis.yml  CLAUDE.md  DBLOOP  README.md  SUPPORT.md  meta.yaml  pyproject.toml  setup.py  sterimol_QM.py
.github/workflows/: ci.yml
analysis/: README.md
analysis/a-values/: 250k_rndm_zinc_drugs_clean_3_brics_distribution_capped_trans_tbucy.csv
analysis/r_group_fragmentation/: 250k_rndm_zinc_drugs_clean_3_brics_distribution.csv  250k_rndm_zinc_drugs_clean_3_brics_distribution_capped_cis_tbucy.csv  250k_rndm_zinc_drugs_clean_3_brics_distribution_capped_phenyl.csv  250k_rndm_zinc_drugs_clean_3_brics_distribution_capped_tbutyl.csv  README.md  aimnet2_out.sdf  aimnet2_out_buried_vol.csv  aimnet2_out_buried_vol_summary.csv  brics_fragments_from_csv.py  cap_fragments.py  compute_buried_vol.py
analysis/radii/: 2d_parity_plots.py  README.md  bondi_sampled.csv  bondi_volumes.txt  bondi_x1.01_sampled.csv  bondi_x1.02_sampled.csv  bondi_x1.03_sampled.csv  bondi_x1.04_sampled.csv  bondi_x1.05_sampled.csv  bondi_x1.06_sampled.csv  bondi_x1.07_sampled.csv  bondi_x1.08_sampled.csv  bondi_x1.09_sampled.csv  bondi_x1.10_sampled.csv  bondi_x1.11_sampled.csv  bondi_x1.12_sampled.csv  bondi_x1.13_sampled.csv  bondi_x1.14_sampled.csv  bondi_x1.15_r2.0_sampled.csv  bondi_x1.15_r2.5_sampled.csv  bondi_x1.15_r3.0_sampled.csv  bondi_x1.15_r4.0_sampled.csv  bondi_x1.15_r4.5_sampled.csv  bondi_x1.15_r5.0_sampled.csv  bondi_x1.15_sampled.csv  bondi_x1.16_sampled.csv  bondi_x1.17_sampled.csv  bondi_x1.18_sampled.csv  bondi_x1.19_sampled.csv  bondi_x1.20_sampled.csv  bondii_x107_volumes.txt  charry_sampled.csv  charry_volumes.txt  compare_radii.py  isodensity_volumes.txt  optimal_scaling.py  parity_plots.py  radius_dependence.py  run_sampled_vbur.py  sambvca_sampled.csv  (+12 more)
analysis/radii/xyz_files/: mol_0002_0001.xyz  mol_0003_0001.xyz  (+484 more)
benchmarks/: benchmark_buried_vol.py  results.csv
dbstep/: Dbstep.py  __init__.py  __main__.py  calculator.py  constants.py  getdata.py  graph.py  parse_data.py  requirements.txt  sterics.py  sterimol_QM.py  writer.py
dbstep.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
dbstep/examples/: 1Nap.fchk  35diMePh.fchk  4MePh.fchk  Ad.fchk  Benchmark.csv  Bn.fchk  CEt3.fchk  CH2iPr.fchk  CH2tBu.fchk  CHEt2.fchk  Me.fchk  Ph.fchk  acetylene.fchk  acetylene.xyz  cHex.fchk  hcn.fchk  hcn.xyz  iPr.fchk  nBu.fchk  nPr.fchk  tBu.fchk
examples/: carbene_sterics.ipynb  out.csv  out2.csv
examples/.ipynb_checkpoints/: carbene_sterics-checkpoint.ipynb
examples/carbenes/: L1.xyz  L10.xyz  L11.xyz  L12.xyz  L13.xyz  L14.xyz  L15.xyz  L16.xyz  L17.xyz  L18.xyz  L19.xyz  L2.xyz  L20.xyz  L21.xyz  L22.xyz  L3.xyz  L4.xyz  L5.xyz  L6.xyz  L7.xyz  L8.xyz  L9.xyz
reference/Sambvca21/: ._sambvca21.f  sambvca21.x
tests/: test_buried_vol.py  test_calculator.py  test_dbstep.py  test_parse_data.py
tests/cube_files/: Ne.xyz  Ne_medium.cube  benzene.xyz  benzene_coarse.cube
(+110 files in other folders)
